--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,6 +9,7 @@
 body {
   background-color: vars.$dark-3;
   color: vars.$cream;
+  min-width: 1200px;
 }
 
 body,
